--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="HabitTracker">HabitTracker</string>
+    <string name="HabitTrackerTitle">HabitTracker!</string>
+    <string name="AddHabit">Add Habit</string>
+    <string name="Habits">Habits</string>
+    <string name="HabitHint">Enter Habit Name</string>
 </resources>
