--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="AddHabit">Add Habit</string>
     <string name="Habits">Habits</string>
     <string name="HabitHint">Enter Habit Name</string>
+    <string name="BackBtn">Back</string>
 </resources>
