--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
-    <string name="HabitTrackerTitle">HabitTracker!</string>
-    <string name="AddHabit">Add Habit</string>
-    <string name="Habits">Habits</string>
-    <string name="HabitHint">Enter Habit Name</string>
+    <string name="activity_label_addhabits">Add Habit</string>
+    <string name="activity_label_viewhabits">Your Habits</string>
+
+    <string name="addhabit_textview_title">HabitTracker!</string>
+    <string name="addhabit_button_add">Add Habit</string>
+    <string name="addhabit_button_viewHabits">Habits</string>
+    <string name="addhabit_button_hint">Enter Habit Name</string>
     <string name="BackBtn">Back</string>
 </resources>
