Add habit frequency + Limit habit name length

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="addhabit_button_viewHabits">Habits</string>
     <string name="addhabit_button_hint">Enter Habit Name</string>
     <string name="addhabit_button_cancel">Cancel</string>
+
+    <string-array name="habit_frequency_array">
+        <item>Daily</item>
+        <item>Hourly</item>
+    </string-array>
 </resources>
